Closed
Bug 253299
Opened 22 years ago
Closed 22 years ago
Arrow keys work twice, when form page contains radio buttons
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla1.8alpha3
People
(Reporter: ado, Assigned: bzbarsky)
Details
(Keywords: regression, testcase)
Attachments
(3 files)
|
1.19 KB,
text/html
|
Details | |
|
1.25 KB,
patch
|
aaronlev
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
|
1.15 KB,
text/html
|
Details |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a2) Gecko/20040714
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a2) Gecko/20040714
I've found behaviour, which weren't usual in versions before..
When page contain form with radio buttons (min. 2 of course), you check a one
and want to go down with arrow down keys, page goes down, but it also change a
selection of radio button to next one..
Reproducible: Always
Steps to Reproduce:
1. try to make a long page with form, which contains few radio buttons
2. select one button and press arrow down key..
3. page gone down, but it also change selected radio button to next one..
Actual Results:
If you don't expect this behaviour, you can easy check thing, that you don't want..
I've found this in mailman admin interface, where you have 4 radio buttons with
mail actions, in moderate list ..
Expected Results:
When you press arrow down key, just page should go down, don't change anything
in form...
| Assignee | ||
Comment 1•22 years ago
|
||
Andrej, can you point to a publically available page that shows the problem?
Component: Browser-General → Keyboard: Find as you Type
Keywords: regression
| Assignee | ||
Updated•22 years ago
|
Assignee: general → aaronleventhal
Component: Keyboard: Find as you Type → Keyboard: Navigation
QA Contact: general
| Reporter | ||
Comment 2•22 years ago
|
||
(In reply to comment #1)
> Andrej, can you point to a publically available page that shows the problem?
http://alica.alphanet.sk/~ado/mozilla/site.html
for example, just select "discard" in first message/table and press key arrow down..
..and then, also, when you press arrow up, it's same..
| Assignee | ||
Comment 3•22 years ago
|
||
| Assignee | ||
Comment 4•22 years ago
|
||
This was a purposeful change; see bug 17602.
That said, we should just be changing the radio buttons, not also scrolling the
page.
| Assignee | ||
Comment 5•22 years ago
|
||
I don't see anything in the bug 17602 patch that sets the event as "handled"...
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 6•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #154504 -
Flags: superreview?(bryner)
Attachment #154504 -
Flags: review?(aaronleventhal)
Updated•22 years ago
|
Attachment #154504 -
Flags: review?(aaronleventhal) → review+
Comment 7•22 years ago
|
||
Here is another problem that could be a regression from bug 17602.
Clicking the radio buttons, I see:
in Mozilla 1.7: focus, click, change
in 2004-07-26-07: focus, click, change, change
Updated•22 years ago
|
Attachment #154504 -
Flags: superreview?(bryner) → superreview+
| Assignee | ||
Updated•22 years ago
|
Assignee: aaronleventhal → bzbarsky
Priority: -- → P3
Target Milestone: --- → mozilla1.8alpha3
| Assignee | ||
Comment 9•22 years ago
|
||
Checked in.
Mats, could you file a followup bug on comment 7? That looks very wrong, but
I'm not quite sure what's up there...
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 10•22 years ago
|
||
(Filed bug 254238 for problem in comment 7)
Updated•7 years ago
|
Component: Keyboard: Navigation → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•