When changing selected radio button with arrow keys, prevent the default action for the key event.  Bug 253299, r=aaronl, sr=bryner